<resources>
    <string name="app_name">Inscripciones</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="dire">Direccion</string>
    <string name="fecha">DD-MM-AAAA</string>
    <string name="hora">HH-MM</string>
    <string name="guardar">Guardar</string>
</resources>